@@ -5,6 +5,7 @@ Changelog
 ~~~~~~~~~~~~~~~~
 
  * Persist tab hash in URL to allow direct navigation to tabs in the admin interface (Ben Weatherman)
+ * Animate the chevron icon when opening sub-menus in the admin (Carlo Ascani)
  * Fix: Status button on 'edit page' now links to the correct URL when live and draft slug differ (LB (Ben Johnston))
  * Fix: Image title text in the gallery and in the chooser now wraps for long filenames (LB (Ben Johnston), Luiz Boaretto)
 
